Fixing PLM reporting of savings from client LoFi

Client LoFi savings was not split into the body estimate and the headers
estimate, so it was not being tracked in PLM correctly (which only looks
at body). This addresses that by moving the respective parts of the
computation into the correct methods. This renames the method as well,
and sources uesd_drp from a better location.

Bug: 808728
Change-Id: I7c45edc8b9d72dd86e5aae0906a57305381f48d7
Reviewed-on: https://chromium-review.googlesource.com/899848
Commit-Queue: Ryan Sturm <ryansturm@chromium.org>
Reviewed-by: Charlie Harrison <csharrison@chromium.org>
Reviewed-by: Tarun Bansal <tbansal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536194}
Former-commit-id: 07d0193b832a218fe58cf672d1d1cf5e58991651