components/data_reduction_proxy/core/browser/data_reduction_proxy_configurator.cc
@@ -11,9 +11,9 @@
 
 #include "base/strings/string_util.h"
 #include "base/values.h"
+#include "components/data_reduction_proxy/core/browser/data_reduction_proxy_util.h"
 #include "components/data_reduction_proxy/core/browser/network_properties_manager.h"
 #include "components/data_reduction_proxy/core/common/data_reduction_proxy_event_creator.h"
-#include "components/data_reduction_proxy/core/common/data_reduction_proxy_util.h"
 #include "net/proxy_resolution/proxy_config.h"
 
 namespace data_reduction_proxy {
